--- a/api/src/main/resources/custom_templates/api.mustache
+++ b/api/src/main/resources/custom_templates/api.mustache
@@ -188,7 +188,7 @@ import org.openapitools.jackson.nullable.JsonNullableModule;
             final String[] localVarAccepts = {
         {{#produces}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/produces}}
             };
-            final String localVarAccept = apiClient.selectHeaderAccept(localVarAccepts);
+            final String localVarAccept = apiClient.selectHeaderAccept(localVarAccepts, localVarPath);
 
             final String[] localVarContentTypes = {
         "text/xml", {{#consumes}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/consumes}}
