--- a/api/src/main/resources/custom_templates/api.mustache
+++ b/api/src/main/resources/custom_templates/api.mustache
@@ -191,7 +191,7 @@ import org.openapitools.jackson.nullable.JsonNullableModule;
             final String localVarAccept = apiClient.selectHeaderAccept(localVarAccepts, localVarPath);
 
             final String[] localVarContentTypes = {
-        "text/xml", "application/json", {{#consumes}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/consumes}}
+        "text/xml", {{#consumes}}"{{{mediaType}}}"{{^-last}}, {{/-last}}{{/consumes}}
             };
             final String localVarContentType = apiClient.selectHeaderContentType(localVarContentTypes);
 
