Adding missing import

--- a/api/src/main/resources/custom_templates/ApiClient.mustache
+++ b/api/src/main/resources/custom_templates/ApiClient.mustache
@@ -95,6 +95,8 @@ import com.okta.sdk.cache.Caches;
 import com.okta.sdk.cache.Cache;
 import com.okta.sdk.cache.CacheManager;
 
+import com.okta.sdk.client.MultiThreadingWarningUtil;
+
 import com.okta.sdk.resource.common.PagedList;
 
 import com.okta.sdk.resource.model.HttpMethod;
